--- a/package.json
+++ b/package.json
@@ -14,11 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.398.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1"
+    "@aws-sdk/client-s3": "^3.646.0",
+    "formidable": "^3.5.1"
   },
     "engines": {
     "node": ">=18.0.0"
