--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.646.0",
+    "canvas": "^3.2.0",
     "formidable": "^3.5.1"
   },
-    "engines": {
+  "engines": {
     "node": ">=18.0.0"
   }
 }
