--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.646.0",
     "canvas": "^3.2.0",
+    "firebase-admin": "^13.6.0",
     "formidable": "^3.5.1"
   },
   "engines": {
